cmake_minimum_required (VERSION 3.0)

add_library(Cookbook 
"../Library/Source_Files/01_Instance_and_Devices/03_Connecting_with_a_Vulkan_Loader_library.cpp"
"../Library/Source_Files/01_Instance_and_Devices/05_Loading_function_exported_from_a_Vulkan_Loader_library.cpp"
"../Library/Source_Files/01_Instance_and_Devices/06_Loading_global-level_functions.cpp"
"../Library/Source_Files/01_Instance_and_Devices/07_Checking_available_Instance_extensions.cpp"
"../Library/Source_Files/01_Instance_and_Devices/08_Creating_a_Vulkan_Instance.cpp"
"../Library/Source_Files/01_Instance_and_Devices/09_Loading_instance-level_functions.cpp"
"../Library/Source_Files/01_Instance_and_Devices/10_Enumerating_available_physical_devices.cpp"
"../Library/Source_Files/01_Instance_and_Devices/11_Checking_available_device_extensions.cpp"
"../Library/Source_Files/01_Instance_and_Devices/12_Getting_features_and_properties_of_a_physical_device.cpp"
"../Library/Source_Files/01_Instance_and_Devices/13_Checking_available_queue_families_and_their_properties.cpp"
"../Library/Source_Files/01_Instance_and_Devices/14_Selecting_index_of_a_queue_family_with_desired_capabilities.cpp"
"../Library/Source_Files/01_Instance_and_Devices/15_Creating_a_logical_device.cpp"
"../Library/Source_Files/01_Instance_and_Devices/16_Loading_device-level_functions.cpp"
"../Library/Source_Files/01_Instance_and_Devices/17_Getting_a_device_queue.cpp"
"../Library/Source_Files/01_Instance_and_Devices/18_Creating_a_logical_device_with_geometry_shaders_and_graphics_queue.cpp"
"../Library/Source_Files/01_Instance_and_Devices/19_Destroying_a_logical_device.cpp"
"../Library/Source_Files/01_Instance_and_Devices/20_Destroying_a_Vulkan_Instance.cpp"
"../Library/Source_Files/01_Instance_and_Devices/21_Releasing_a_Vulkan_Loader_library.cpp"
"../Library/Source_Files/01_Instance_and_Devices/03_Connecting_with_a_Vulkan_Loader_library.h"
"../Library/Source_Files/01_Instance_and_Devices/05_Loading_function_exported_from_a_Vulkan_Loader_library.h"
"../Library/Source_Files/01_Instance_and_Devices/06_Loading_global-level_functions.h"
"../Library/Source_Files/01_Instance_and_Devices/07_Checking_available_Instance_extensions.h"
"../Library/Source_Files/01_Instance_and_Devices/08_Creating_a_Vulkan_Instance.h"
"../Library/Source_Files/01_Instance_and_Devices/09_Loading_instance-level_functions.h"
"../Library/Source_Files/01_Instance_and_Devices/10_Enumerating_available_physical_devices.h"
"../Library/Source_Files/01_Instance_and_Devices/11_Checking_available_device_extensions.h"
"../Library/Source_Files/01_Instance_and_Devices/12_Getting_features_and_properties_of_a_physical_device.h"
"../Library/Source_Files/01_Instance_and_Devices/13_Checking_available_queue_families_and_their_properties.h"
"../Library/Source_Files/01_Instance_and_Devices/14_Selecting_index_of_a_queue_family_with_desired_capabilities.h"
"../Library/Source_Files/01_Instance_and_Devices/15_Creating_a_logical_device.h"
"../Library/Source_Files/01_Instance_and_Devices/16_Loading_device-level_functions.h"
"../Library/Source_Files/01_Instance_and_Devices/17_Getting_a_device_queue.h"
"../Library/Source_Files/01_Instance_and_Devices/18_Creating_a_logical_device_with_geometry_shaders_and_graphics_queue.h"
"../Library/Source_Files/01_Instance_and_Devices/19_Destroying_a_logical_device.h"
"../Library/Source_Files/01_Instance_and_Devices/20_Destroying_a_Vulkan_Instance.h"
"../Library/Source_Files/01_Instance_and_Devices/21_Releasing_a_Vulkan_Loader_library.h"
"../Library/Source_Files/02_Image_Presentation/01_Creating_a_Vulkan_Instance_with_WSI_extensions_enabled.cpp"
"../Library/Source_Files/02_Image_Presentation/01_Creating_a_Vulkan_Instance_with_WSI_extensions_enabled.h"
"../Library/Source_Files/02_Image_Presentation/02_Creating_a_presentation_surface.cpp"
"../Library/Source_Files/02_Image_Presentation/02_Creating_a_presentation_surface.h"
"../Library/Source_Files/02_Image_Presentation/03_Selecting_a_queue_family_that_supports_presentation_to_a_given_surface.cpp"
"../Library/Source_Files/02_Image_Presentation/03_Selecting_a_queue_family_that_supports_presentation_to_a_given_surface.h"
"../Library/Source_Files/02_Image_Presentation/04_Creating_a_logical_device_with_WSI_extensions_enabled.cpp"
"../Library/Source_Files/02_Image_Presentation/04_Creating_a_logical_device_with_WSI_extensions_enabled.h"
"../Library/Source_Files/02_Image_Presentation/05_Selecting_a_desired_presentation_mode.cpp"
"../Library/Source_Files/02_Image_Presentation/05_Selecting_a_desired_presentation_mode.h"
"../Library/Source_Files/02_Image_Presentation/06_Getting_capabilities_of_a_presentation_surface.cpp"
"../Library/Source_Files/02_Image_Presentation/06_Getting_capabilities_of_a_presentation_surface.h"
"../Library/Source_Files/02_Image_Presentation/07_Selecting_a_number_of_swapchain_images.cpp"
"../Library/Source_Files/02_Image_Presentation/07_Selecting_a_number_of_swapchain_images.h"
"../Library/Source_Files/02_Image_Presentation/08_Choosing_a_size_of_swapchain_images.cpp"
"../Library/Source_Files/02_Image_Presentation/08_Choosing_a_size_of_swapchain_images.h"
"../Library/Source_Files/02_Image_Presentation/09_Selecting_desired_usage_scenarios_of_swapchain_images.cpp"
"../Library/Source_Files/02_Image_Presentation/09_Selecting_desired_usage_scenarios_of_swapchain_images.h"
"../Library/Source_Files/02_Image_Presentation/10_Selecting_a_transformation_of_swapchain_images.cpp"
"../Library/Source_Files/02_Image_Presentation/10_Selecting_a_transformation_of_swapchain_images.h"
"../Library/Source_Files/02_Image_Presentation/11_Selecting_a_format_of_swapchain_images.cpp"
"../Library/Source_Files/02_Image_Presentation/11_Selecting_a_format_of_swapchain_images.h"
"../Library/Source_Files/02_Image_Presentation/12_Creating_a_swapchain.cpp"
"../Library/Source_Files/02_Image_Presentation/12_Creating_a_swapchain.h"
"../Library/Source_Files/02_Image_Presentation/13_Getting_handles_of_swapchain_images.cpp"
"../Library/Source_Files/02_Image_Presentation/13_Getting_handles_of_swapchain_images.h"
"../Library/Source_Files/02_Image_Presentation/14_Creating_a_swapchain_with_R8G8B8A8_format_and_a_MAILBOX_present_mode.cpp"
"../Library/Source_Files/02_Image_Presentation/14_Creating_a_swapchain_with_R8G8B8A8_format_and_a_MAILBOX_present_mode.h"
"../Library/Source_Files/02_Image_Presentation/15_Acquiring_a_swapchain_image.cpp"
"../Library/Source_Files/02_Image_Presentation/15_Acquiring_a_swapchain_image.h"
"../Library/Source_Files/02_Image_Presentation/16_Presenting_an_image.cpp"
"../Library/Source_Files/02_Image_Presentation/16_Presenting_an_image.h"
"../Library/Source_Files/02_Image_Presentation/17_Destroying_a_swapchain.cpp"
"../Library/Source_Files/02_Image_Presentation/17_Destroying_a_swapchain.h"
"../Library/Source_Files/02_Image_Presentation/18_Destroying_a_presentation_surface.cpp"
"../Library/Source_Files/02_Image_Presentation/18_Destroying_a_presentation_surface.h"
"../Library/Source_Files/03_Command_Buffers_and_Synchronization/CBS.cpp"
"../Library/Source_Files/03_Command_Buffers_and_Synchronization/CBS.h"
"../Library/Source_Files/04_Resources_and_Memory/01_Creating_a_buffer.cpp"
"../Library/Source_Files/04_Resources_and_Memory/01_Creating_a_buffer.h"
"../Library/Source_Files/04_Resources_and_Memory/02_Allocating_and_binding_memory_object_to_a_buffer.cpp"
"../Library/Source_Files/04_Resources_and_Memory/02_Allocating_and_binding_memory_object_to_a_buffer.h"
"../Library/Source_Files/04_Resources_and_Memory/03_Setting_a_buffer_memory_barrier.cpp"
"../Library/Source_Files/04_Resources_and_Memory/03_Setting_a_buffer_memory_barrier.h"
"../Library/Source_Files/04_Resources_and_Memory/04_Creating_a_buffer_view.cpp"
"../Library/Source_Files/04_Resources_and_Memory/04_Creating_a_buffer_view.h"
"../Library/Source_Files/04_Resources_and_Memory/05_Creating_an_image.cpp"
"../Library/Source_Files/04_Resources_and_Memory/05_Creating_an_image.h"
"../Library/Source_Files/04_Resources_and_Memory/06_Allocating_and_binding_memory_object_to_an_image.cpp"
"../Library/Source_Files/04_Resources_and_Memory/06_Allocating_and_binding_memory_object_to_an_image.h"
"../Library/Source_Files/04_Resources_and_Memory/07_Setting_an_image_memory_barrier.cpp"
"../Library/Source_Files/04_Resources_and_Memory/07_Setting_an_image_memory_barrier.h"
"../Library/Source_Files/04_Resources_and_Memory/08_Creating_an_image_view.cpp"
"../Library/Source_Files/04_Resources_and_Memory/08_Creating_an_image_view.h"
"../Library/Source_Files/04_Resources_and_Memory/09_Creating_a_2D_image_and_view.cpp"
"../Library/Source_Files/04_Resources_and_Memory/09_Creating_a_2D_image_and_view.h"
"../Library/Source_Files/04_Resources_and_Memory/10_Creating_a_layered_2D_image_with_a_CUBEMAP_view.cpp"
"../Library/Source_Files/04_Resources_and_Memory/10_Creating_a_layered_2D_image_with_a_CUBEMAP_view.h"
"../Library/Source_Files/04_Resources_and_Memory/11_Mapping,_updating_and_unmapping_host-visible_memory.cpp"
"../Library/Source_Files/04_Resources_and_Memory/11_Mapping,_updating_and_unmapping_host-visible_memory.h"
"../Library/Source_Files/04_Resources_and_Memory/12_Copying_data_between_buffers.cpp"
"../Library/Source_Files/04_Resources_and_Memory/12_Copying_data_between_buffers.h"
"../Library/Source_Files/04_Resources_and_Memory/13_Copying_data_from_a_buffer_to_an_image.cpp"
"../Library/Source_Files/04_Resources_and_Memory/13_Copying_data_from_a_buffer_to_an_image.h"
"../Library/Source_Files/04_Resources_and_Memory/14_Copying_data_from_an_image_to_a_buffer.cpp"
"../Library/Source_Files/04_Resources_and_Memory/14_Copying_data_from_an_image_to_a_buffer.h"
"../Library/Source_Files/04_Resources_and_Memory/15_Using_staging_buffer_to_update_a_buffer_with_a_device-local_memory_bound.cpp"
"../Library/Source_Files/04_Resources_and_Memory/15_Using_staging_buffer_to_update_a_buffer_with_a_device-local_memory_bound.h"
"../Library/Source_Files/04_Resources_and_Memory/16_Using_staging_buffer_to_update_an_image_with_a_device-local_memory_bound.cpp"
"../Library/Source_Files/04_Resources_and_Memory/16_Using_staging_buffer_to_update_an_image_with_a_device-local_memory_bound.h"
"../Library/Source_Files/04_Resources_and_Memory/17_Destroying_an_image_view.cpp"
"../Library/Source_Files/04_Resources_and_Memory/17_Destroying_an_image_view.h"
"../Library/Source_Files/04_Resources_and_Memory/18_Destroying_an_image.cpp"
"../Library/Source_Files/04_Resources_and_Memory/18_Destroying_an_image.h"
"../Library/Source_Files/04_Resources_and_Memory/19_Destroying_a_buffer_view.cpp"
"../Library/Source_Files/04_Resources_and_Memory/19_Destroying_a_buffer_view.h"
"../Library/Source_Files/04_Resources_and_Memory/20_Freeing_a_memory_object.cpp"
"../Library/Source_Files/04_Resources_and_Memory/20_Freeing_a_memory_object.h"
"../Library/Source_Files/04_Resources_and_Memory/21_Destroying_a_buffer.cpp"
"../Library/Source_Files/04_Resources_and_Memory/21_Destroying_a_buffer.h"
"../Library/Source_Files/05_Descriptor_Sets/01_Creating_a_sampler.cpp"
"../Library/Source_Files/05_Descriptor_Sets/01_Creating_a_sampler.h"
"../Library/Source_Files/05_Descriptor_Sets/02_Creating_a_sampled_image.cpp"
"../Library/Source_Files/05_Descriptor_Sets/02_Creating_a_sampled_image.h"
"../Library/Source_Files/05_Descriptor_Sets/03_Creating_a_combined_image_sampler.cpp"
"../Library/Source_Files/05_Descriptor_Sets/03_Creating_a_combined_image_sampler.h"
"../Library/Source_Files/05_Descriptor_Sets/04_Creating_a_storage_image.cpp"
"../Library/Source_Files/05_Descriptor_Sets/04_Creating_a_storage_image.h"
"../Library/Source_Files/05_Descriptor_Sets/05_Creating_a_uniform_texel_buffer.cpp"
"../Library/Source_Files/05_Descriptor_Sets/05_Creating_a_uniform_texel_buffer.h"
"../Library/Source_Files/05_Descriptor_Sets/06_Creating_a_storage_texel_buffer.cpp"
"../Library/Source_Files/05_Descriptor_Sets/06_Creating_a_storage_texel_buffer.h"
"../Library/Source_Files/05_Descriptor_Sets/07_Creating_a_uniform_buffer.cpp"
"../Library/Source_Files/05_Descriptor_Sets/07_Creating_a_uniform_buffer.h"
"../Library/Source_Files/05_Descriptor_Sets/08_Creating_a_storage_buffer.cpp"
"../Library/Source_Files/05_Descriptor_Sets/08_Creating_a_storage_buffer.h"
"../Library/Source_Files/05_Descriptor_Sets/09_Creating_an_input_attachment.cpp"
"../Library/Source_Files/05_Descriptor_Sets/09_Creating_an_input_attachment.h"
"../Library/Source_Files/05_Descriptor_Sets/10_Creating_a_descriptor_set_layout.cpp"
"../Library/Source_Files/05_Descriptor_Sets/10_Creating_a_descriptor_set_layout.h"
"../Library/Source_Files/05_Descriptor_Sets/11_Creating_a_descriptor_pool.cpp"
"../Library/Source_Files/05_Descriptor_Sets/11_Creating_a_descriptor_pool.h"
"../Library/Source_Files/05_Descriptor_Sets/12_Allocating_descriptor_sets.cpp"
"../Library/Source_Files/05_Descriptor_Sets/12_Allocating_descriptor_sets.h"
"../Library/Source_Files/05_Descriptor_Sets/13_Updating_descriptor_sets.cpp"
"../Library/Source_Files/05_Descriptor_Sets/13_Updating_descriptor_sets.h"
"../Library/Source_Files/05_Descriptor_Sets/14_Binding_descriptor_sets.cpp"
"../Library/Source_Files/05_Descriptor_Sets/14_Binding_descriptor_sets.h"
"../Library/Source_Files/05_Descriptor_Sets/15_Creating_descriptors_with_a_texture_and_a_uniform_buffer.cpp"
"../Library/Source_Files/05_Descriptor_Sets/15_Creating_descriptors_with_a_texture_and_a_uniform_buffer.h"
"../Library/Source_Files/05_Descriptor_Sets/16_Freeing_descriptor_sets.cpp"
"../Library/Source_Files/05_Descriptor_Sets/16_Freeing_descriptor_sets.h"
"../Library/Source_Files/05_Descriptor_Sets/17_Resetting_a_descriptor_pool.cpp"
"../Library/Source_Files/05_Descriptor_Sets/17_Resetting_a_descriptor_pool.h"
"../Library/Source_Files/05_Descriptor_Sets/18_Destroying_a_descriptor_pool.cpp"
"../Library/Source_Files/05_Descriptor_Sets/18_Destroying_a_descriptor_pool.h"
"../Library/Source_Files/05_Descriptor_Sets/19_Destroying_a_descriptor_set_layout.cpp"
"../Library/Source_Files/05_Descriptor_Sets/19_Destroying_a_descriptor_set_layout.h"
"../Library/Source_Files/05_Descriptor_Sets/20_Destroying_a_sampler.cpp"
"../Library/Source_Files/05_Descriptor_Sets/20_Destroying_a_sampler.h"
"../Library/Source_Files/06_Render_Passes_and_Framebuffers/01_Specifying_attachments_descriptions.cpp"
"../Library/Source_Files/06_Render_Passes_and_Framebuffers/01_Specifying_attachments_descriptions.h"
"../Library/Source_Files/06_Render_Passes_and_Framebuffers/02_Specifying_subpass_descriptions.cpp"
"../Library/Source_Files/06_Render_Passes_and_Framebuffers/02_Specifying_subpass_descriptions.h"
"../Library/Source_Files/06_Render_Passes_and_Framebuffers/03_Specifying_dependencies_between_subpasses.cpp"
"../Library/Source_Files/06_Render_Passes_and_Framebuffers/03_Specifying_dependencies_between_subpasses.h"
"../Library/Source_Files/06_Render_Passes_and_Framebuffers/04_Creating_a_render_pass.cpp"
"../Library/Source_Files/06_Render_Passes_and_Framebuffers/04_Creating_a_render_pass.h"
"../Library/Source_Files/06_Render_Passes_and_Framebuffers/05_Creating_a_framebuffer.cpp"
"../Library/Source_Files/06_Render_Passes_and_Framebuffers/05_Creating_a_framebuffer.h"
"../Library/Source_Files/06_Render_Passes_and_Framebuffers/06_Preparing_a_render_pass_for_geometry_rendering_and_postprocess_subpasses.cpp"
"../Library/Source_Files/06_Render_Passes_and_Framebuffers/06_Preparing_a_render_pass_for_geometry_rendering_and_postprocess_subpasses.h"
"../Library/Source_Files/06_Render_Passes_and_Framebuffers/07_Preparing_a_render_pass_and_a_framebuffer_with_color_and_depth_attachments.cpp"
"../Library/Source_Files/06_Render_Passes_and_Framebuffers/07_Preparing_a_render_pass_and_a_framebuffer_with_color_and_depth_attachments.h"
"../Library/Source_Files/06_Render_Passes_and_Framebuffers/08_Beginning_a_render_pass.cpp"
"../Library/Source_Files/06_Render_Passes_and_Framebuffers/08_Beginning_a_render_pass.h"
"../Library/Source_Files/06_Render_Passes_and_Framebuffers/09_Progressing_to_the_next_subpass.cpp"
"../Library/Source_Files/06_Render_Passes_and_Framebuffers/09_Progressing_to_the_next_subpass.h"
"../Library/Source_Files/06_Render_Passes_and_Framebuffers/10_Ending_a_render_pass.cpp"
"../Library/Source_Files/06_Render_Passes_and_Framebuffers/10_Ending_a_render_pass.h"
"../Library/Source_Files/06_Render_Passes_and_Framebuffers/11_Destroying_a_framebuffer.cpp"
"../Library/Source_Files/06_Render_Passes_and_Framebuffers/11_Destroying_a_framebuffer.h"
"../Library/Source_Files/06_Render_Passes_and_Framebuffers/12_Destroying_a_render_pass.cpp"
"../Library/Source_Files/06_Render_Passes_and_Framebuffers/12_Destroying_a_render_pass.h"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/01_Creating_a_shader_module.cpp"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/01_Creating_a_shader_module.h"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/02_Specifying_pipeline_shader_stages.cpp"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/02_Specifying_pipeline_shader_stages.h"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/03_Specifying_pipeline_vertex_input_state.cpp"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/03_Specifying_pipeline_vertex_input_state.h"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/04_Specifying_pipeline_input_assembly_state.cpp"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/04_Specifying_pipeline_input_assembly_state.h"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/05_Specifying_pipeline_tessellation_state.cpp"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/05_Specifying_pipeline_tessellation_state.h"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/06_Specifying_pipeline_viewport_and_scissor_test_state.cpp"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/06_Specifying_pipeline_viewport_and_scissor_test_state.h"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/07_Specifying_pipeline_rasterization_state.cpp"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/07_Specifying_pipeline_rasterization_state.h"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/08_Specifying_pipeline_multisample_state.cpp"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/08_Specifying_pipeline_multisample_state.h"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/09_Specifying_pipeline_depth_and_stencil_state.cpp"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/09_Specifying_pipeline_depth_and_stencil_state.h"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/10_Specifying_pipeline_blend_state.cpp"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/10_Specifying_pipeline_blend_state.h"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/11_Specifying_pipeline_dynamic_states.cpp"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/11_Specifying_pipeline_dynamic_states.h"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/12_Creating_a_pipeline_layout.cpp"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/12_Creating_a_pipeline_layout.h"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/13_Specifying_graphics_pipeline_creation_parameters.cpp"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/13_Specifying_graphics_pipeline_creation_parameters.h"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/14_Creating_a_pipeline_cache_object.cpp"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/14_Creating_a_pipeline_cache_object.h"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/15_Retrieving_data_from_a_pipeline_cache.cpp"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/15_Retrieving_data_from_a_pipeline_cache.h"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/16_Merging_multiple_pipeline_cache_objects.cpp"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/16_Merging_multiple_pipeline_cache_objects.h"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/17_Creating_graphics_pipelines.cpp"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/17_Creating_graphics_pipelines.h"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/18_Creating_a_compute_pipeline.cpp"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/18_Creating_a_compute_pipeline.h"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/19_Binding_a_pipeline_object.cpp"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/19_Binding_a_pipeline_object.h"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/20_Creating_a_pipeline_layout_with_a_combined_image_sampler,_a_buffer_and_push_constant_ranges.cpp"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/20_Creating_a_pipeline_layout_with_a_combined_image_sampler,_a_buffer_and_push_constant_ranges.h"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/21_Creating_a_graphics_pipeline_with_vertex_and_fragment_shaders,_depth_test_enabled,_and_with_dynamic_viewport_and_scissor_tests.cpp"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/21_Creating_a_graphics_pipeline_with_vertex_and_fragment_shaders,_depth_test_enabled,_and_with_dynamic_viewport_and_scissor_tests.h"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/22_Creating_multiple_graphics_pipelines_on_multiple_threads.cpp"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/22_Creating_multiple_graphics_pipelines_on_multiple_threads.h"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/23_Destroying_a_pipeline.cpp"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/23_Destroying_a_pipeline.h"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/24_Destroying_a_pipeline_cache.cpp"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/24_Destroying_a_pipeline_cache.h"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/25_Destroying_a_pipeline_layout.cpp"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/25_Destroying_a_pipeline_layout.h"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/26_Destroying_a_shader_module.cpp"
"../Library/Source_Files/08_Graphics_and_Compute_Pipelines/26_Destroying_a_shader_module.h"
"../Library/Source_Files/09_Command_Recording_and_Drawing/01_Clearing_a_color_image.cpp"
"../Library/Source_Files/09_Command_Recording_and_Drawing/01_Clearing_a_color_image.h"
"../Library/Source_Files/09_Command_Recording_and_Drawing/02_Clearing_a_depth-stencil_image.cpp"
"../Library/Source_Files/09_Command_Recording_and_Drawing/02_Clearing_a_depth-stencil_image.h"
"../Library/Source_Files/09_Command_Recording_and_Drawing/03_Clearing_render_pass_attachments.cpp"
"../Library/Source_Files/09_Command_Recording_and_Drawing/03_Clearing_render_pass_attachments.h"
"../Library/Source_Files/09_Command_Recording_and_Drawing/04_Binding_vertex_buffers.cpp"
"../Library/Source_Files/09_Command_Recording_and_Drawing/04_Binding_vertex_buffers.h"
"../Library/Source_Files/09_Command_Recording_and_Drawing/05_Binding_an_index_buffer.cpp"
"../Library/Source_Files/09_Command_Recording_and_Drawing/05_Binding_an_index_buffer.h"
"../Library/Source_Files/09_Command_Recording_and_Drawing/06_Providing_data_to_shaders_through_push_constants.cpp"
"../Library/Source_Files/09_Command_Recording_and_Drawing/06_Providing_data_to_shaders_through_push_constants.h"
"../Library/Source_Files/09_Command_Recording_and_Drawing/07_Setting_viewport_state_dynamically.cpp"
"../Library/Source_Files/09_Command_Recording_and_Drawing/07_Setting_viewport_state_dynamically.h"
"../Library/Source_Files/09_Command_Recording_and_Drawing/08_Setting_scissor_state_dynamically.cpp"
"../Library/Source_Files/09_Command_Recording_and_Drawing/08_Setting_scissor_state_dynamically.h"
"../Library/Source_Files/09_Command_Recording_and_Drawing/09_Setting_line_width_state_dynamically.cpp"
"../Library/Source_Files/09_Command_Recording_and_Drawing/09_Setting_line_width_state_dynamically.h"
"../Library/Source_Files/09_Command_Recording_and_Drawing/10_Setting_depth_bias_state_dynamically.cpp"
"../Library/Source_Files/09_Command_Recording_and_Drawing/10_Setting_depth_bias_state_dynamically.h"
"../Library/Source_Files/09_Command_Recording_and_Drawing/11_Setting_blend_constants_state_dynamically.cpp"
"../Library/Source_Files/09_Command_Recording_and_Drawing/11_Setting_blend_constants_state_dynamically.h"
"../Library/Source_Files/09_Command_Recording_and_Drawing/12_Drawing_a_geometry.cpp"
"../Library/Source_Files/09_Command_Recording_and_Drawing/12_Drawing_a_geometry.h"
"../Library/Source_Files/09_Command_Recording_and_Drawing/13_Drawing_an_indexed_geometry.cpp"
"../Library/Source_Files/09_Command_Recording_and_Drawing/13_Drawing_an_indexed_geometry.h"
"../Library/Source_Files/09_Command_Recording_and_Drawing/14_Dispatching_compute_work.cpp"
"../Library/Source_Files/09_Command_Recording_and_Drawing/14_Dispatching_compute_work.h"
"../Library/Source_Files/09_Command_Recording_and_Drawing/15_Executing_secondary_command_buffer_inside_a_primary_command_buffer.cpp"
"../Library/Source_Files/09_Command_Recording_and_Drawing/15_Executing_secondary_command_buffer_inside_a_primary_command_buffer.h"
"../Library/Source_Files/09_Command_Recording_and_Drawing/16_Recording_a_command_buffer_that_draws_a_geometry_with_dynamic_viewport_and_scissor_states.cpp"
"../Library/Source_Files/09_Command_Recording_and_Drawing/16_Recording_a_command_buffer_that_draws_a_geometry_with_dynamic_viewport_and_scissor_states.h"
"../Library/Source_Files/09_Command_Recording_and_Drawing/17_Recording_command_buffers_on_multiple_threads.cpp"
"../Library/Source_Files/09_Command_Recording_and_Drawing/17_Recording_command_buffers_on_multiple_threads.h"
"../Library/Source_Files/09_Command_Recording_and_Drawing/18_Preparing_a_single_frame_of_animation.cpp"
"../Library/Source_Files/09_Command_Recording_and_Drawing/18_Preparing_a_single_frame_of_animation.h"
"../Library/Source_Files/09_Command_Recording_and_Drawing/19_Increasing_the_performance_through_increasing_the_number_of_separately_rendered_frames.cpp"
"../Library/Source_Files/09_Command_Recording_and_Drawing/19_Increasing_the_performance_through_increasing_the_number_of_separately_rendered_frames.h"
"../Library/Source_Files/10_Helper_Recipes/01_Preparing_a_translation_matrix.cpp"
"../Library/Source_Files/10_Helper_Recipes/01_Preparing_a_translation_matrix.h"
"../Library/Source_Files/10_Helper_Recipes/02_Preparing_a_rotation_matrix.cpp"
"../Library/Source_Files/10_Helper_Recipes/02_Preparing_a_rotation_matrix.h"
"../Library/Source_Files/10_Helper_Recipes/03_Preparing_a_scaling_matrix.cpp"
"../Library/Source_Files/10_Helper_Recipes/03_Preparing_a_scaling_matrix.h"
"../Library/Source_Files/10_Helper_Recipes/04_Preparing_a_perspective_projection_matrix.cpp"
"../Library/Source_Files/10_Helper_Recipes/04_Preparing_a_perspective_projection_matrix.h"
"../Library/Source_Files/10_Helper_Recipes/05_Preparing_an_orthographic_projection_matrix.cpp"
"../Library/Source_Files/10_Helper_Recipes/05_Preparing_an_orthographic_projection_matrix.h"
"../Library/Source_Files/10_Helper_Recipes/06_Loading_texture_data_from_a_file.cpp"
"../Library/Source_Files/10_Helper_Recipes/06_Loading_texture_data_from_a_file.h"
"../Library/Source_Files/10_Helper_Recipes/07_Loading_a_3D_model_from_an_OBJ_file.cpp"
"../Library/Source_Files/10_Helper_Recipes/07_Loading_a_3D_model_from_an_OBJ_file.h"
"../Library/Common_Files/VulkanFunctions.h"
"../Library/Common_Files/VulkanFunctions.cpp"
"../Library/Common_Files/AllHeaders.h"
"../Library/Common_Files/Common.cpp"
"../Library/Common_Files/Common.h"
"../Library/Common_Files/ListOfVulkanFunctions.inl"
"../Library/Common_Files/Tools.cpp"
"../Library/Common_Files/Tools.h"
"../Library/Common_Files/VulkanDestroyer.h"
)
add_definitions(-DVK_USE_PLATFORM_WIN32_KHR)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set_target_properties(Cookbook PROPERTIES LINKER_LANGUAGE CXX)
target_include_directories(Cookbook PUBLIC "../Library/Source_Files" "../Library/Common_Files" "../External")